Include nodes which runs pods in kube-system namespace into cluster auto-scaler

--- a/cluster-autoscaler-autodiscover.yml
+++ b/cluster-autoscaler-autodiscover.yml
@@ -144,6 +144,7 @@ spec:
             - --stderrthreshold=info
             - --cloud-provider=aws
             - --skip-nodes-with-local-storage=false
+            - --skip-nodes-with-system-pods=false
             - --expander=least-waste
             - --node-group-auto-discovery=asg:tag=k8s.io/cluster-autoscaler/enabled,k8s.io/cluster-autoscaler/biz4x
           volumeMounts:
