--- a/fluentd-identityservice-config.yml
+++ b/fluentd-identityservice-config.yml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   creationTimestamp: "2019-01-28T07:54:33Z"
-  name: fluentd-biz4x-fe-config
+  name: fluentd-identityservice-config
   namespace: default
   resourceVersion: "4104691"
-  selfLink: /api/v1/namespaces/default/configmaps/fluentd-biz4x-fe-config
+  selfLink: /api/v1/namespaces/default/configmaps/fluentd-identityservice-config
   uid: f32e2db1-22d1-11e9-a14d-482ae31e6a94
 data:
   td-agent.conf: |
@@ -139,7 +139,7 @@ data:
         # index_name fluentd.${tag}.%Y%m%d 
         type_name _doc
         logstash_format true # Setting this option to true will ignore the index_name setting. The default index name prefix is logstash-.
-        logstash_prefix biz4x-frontend.logs
+        logstash_prefix identityservice.logs
         template_name access_log_template
         template_file /tmp/access_log_template.json
         template_overwrite true
