--- a/elasticsearch-config.yml
+++ b/elasticsearch-config.yml
@@ -46,4 +46,4 @@ data:
     node.data: true
     bootstrap.memory_lock: true
 
-  ES_JAVA_OPTS: -Xms512m -Xmx512m -Djna.tmpdir=/tmp
+  ES_JAVA_OPTS: -Xms2g -Xmx2g -Djna.tmpdir=/tmp
