--- a/hpa.yml
+++ b/hpa.yml
@@ -1,6 +1,41 @@
 apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
+  name: aspnetapistarter-hpa
+  namespace: default
+spec:
+  minReplicas: 2
+  maxReplicas: 5
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: StatefulSet
+    name: aspnetapistarter
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target: 
+        type: Utilization
+        averageUtilization: 75
+  - type: Object
+    object: 
+      metric: 
+        name: requests-per-second
+      describedObject:
+#        apiVersion: networking.k8s.io/v1beta1
+        apiVersion: extensions/v1beta1
+        kind: Ingress 
+        name: ingress
+      target: 
+        type: Value
+        value: 10k
+#  - type: Resource
+#    resource:
+#      name: memory
+---
+apiVersion: autoscaling/v2beta2
+kind: HorizontalPodAutoscaler
+metadata:
   name: restapi-hpa
   namespace: default
 spec:
@@ -67,3 +102,23 @@ spec:
 #  - type: Resource
 #    resource:
 #      name: memory
+---
+apiVersion: autoscaling/v2beta2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: rabbitmq-hpa
+  namespace: default 
+spec:
+  minReplicas: 3
+  maxReplicas: 6
+  scaleTargetRef:
+    apiVersion: apps/v1 
+    kind: StatefulSet
+    name: rabbitmq
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target: 
+        type: Utilization
+        averageUtilization: 75
