Add test and triggers to statefuleset

--- a/aspnetapistarter.yml
+++ b/aspnetapistarter.yml
@@ -117,3 +117,6 @@ spec:
           name: access-log-template
       - name: log
         emptyDir: {}
+  test: false
+  triggers:
+    - type: ConfigChange
