Add second mysql db with MYSQL_DATABASE_1

--- a/mysql-initjob.yml
+++ b/mysql-initjob.yml
@@ -29,3 +29,5 @@ spec:
            value: svc-mysql
          - name: MYSQL_DATABASE
            value: AspNetCoreApiStarter 
+         - name: MYSQL_DATABASE_1
+           value: library
