--- a/svc-rabbitmq.yml
+++ b/svc-rabbitmq.yml
@@ -14,8 +14,8 @@ spec:
    - name: http
      protocol: TCP
      port: 15672
-     targetPort: 15672
+     targetPort: http
    - name: amqp
      protocol: TCP
      port: 5672
-     targetPort: 5672
+     targetPort: amqp
