--- a/aspnetapistarter.yml
+++ b/aspnetapistarter.yml
@@ -6,7 +6,7 @@ metadata:
     app: aspnetapistarter
 spec:
   serviceName: svc-aspnetapistarter
-  podManagementPolicy: "Parallel" # Default is OrderedReady
+  podManagementPolicy: Parallel # Default is OrderedReady
   replicas: 2 # Default is 1
   updateStrategy: 
     type: RollingUpdate
