--- a/pythonflaskrestapi.yml
+++ b/pythonflaskrestapi.yml
@@ -6,7 +6,7 @@ metadata:
     app: pythonflaskrestapi
 spec:
   serviceName: svc-pythonflaskrestapi
-  podManagementPolicy: "Parallel" # Default is OrderedReady
+  podManagementPolicy: Parallel # Default is OrderedReady
   replicas: 2 # Default is 1
   updateStrategy: 
     type: RollingUpdate
