--- a/pgadmin.yml
+++ b/pgadmin.yml
@@ -30,7 +30,7 @@ spec:
           imagePullPolicy: Always
           env:
           - name: PGADMIN_DEFAULT_EMAIL
-            value: kokhow.teh@ca-cib.com
+            value: me@email.com
           - name: PGADMIN_DEFAULT_PASSWORD
             valueFrom:
               secretKeyRef:
@@ -50,7 +50,17 @@ spec:
             mountPath: /pgadmin4/servers.json
             subPath: servers.json
             readOnly: true
+          - name: pgadmin-data
+            mountPath: /var/lib/pgadmin
       volumes:
       - name: pgadmin-config
         configMap:
           name: pgadmin-config
+  volumeClaimTemplates:
+  - metadata:
+      name: pgadmin-data
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      resources:
+        requests:
+          storage: 3Gi
