Fix, update mysql manifiests

--- a/mysql-secret.yml
+++ b/mysql-secret.yml
@@ -5,8 +5,8 @@ metadata:
 type: Opaque
 data:
   mysql-root-host: bG9jYWxob3N0
-  mysql-root-password: NHhMYWJzLmNvbQ==
+  mysql-root-password: UCpzc3cwcmQ=
   mysql-user: Z3Vlc3Q=
-  mysql-password: NHhMYWJzLmNvbQ==
+  mysql-password: UCpzc3cwcmQ=
   mysql-replication-user: cmVwbGljYXRpb24=
-  mysql-replication-password: NHhMYWJzLmNvbQ==
+  mysql-replication-password: UCpzc3cwcmQ=
