--- a/mysqlset.yml
+++ b/mysqlset.yml
@@ -1,20 +1,3 @@
-apiVersion: v1
-kind: Service 
-metadata:
-  name: svc-mysql
-  labels: 
-    app: db-mysql
-    component: mysql
-spec:
-  selector:
-    app: db-mysql
-    component: mysql
-#    tier: database
-  ports:  
-  - port: 3306
-    name: mysql
-  clusterIP: None # Headless
----
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -68,9 +51,9 @@ spec:
                name: mysql-secret
                key: mysql-password
          - name: MYSQL_DATABASE
-           value: biz4xdb
-         - name: MYSQL_DATABASE_1
            value: AspNetCoreApiStarter
+         - name: MYSQL_DATABASE_1
+           value: library
         ports:
         - containerPort: 3306
           name: mysql
@@ -92,4 +75,4 @@ spec:
 #      storageClassName: local-storage
       resources:
         requests:
-          storage: 2Gi
+          storage: 10Gi
