--- a/hpa.yml
+++ b/hpa.yml
@@ -71,6 +71,41 @@ spec:
 apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
+  name: pythonrestapi-hpa
+  namespace: default
+spec:
+  minReplicas: 2
+  maxReplicas: 5
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: StatefulSet
+    name: pythonrestapi
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target: 
+        type: Utilization
+        averageUtilization: 75
+  - type: Object
+    object: 
+      metric: 
+        name: requests-per-second
+      describedObject:
+#        apiVersion: networking.k8s.io/v1beta1
+        apiVersion: extensions/v1beta1
+        kind: Ingress 
+        name: ingress
+      target: 
+        type: Value
+        value: 10k
+#  - type: Resource
+#    resource:
+#      name: memory
+---
+apiVersion: autoscaling/v2beta2
+kind: HorizontalPodAutoscaler
+metadata:
   name: kibana-hpa
   namespace: default 
 spec:
