--- a/mysql-master.yml
+++ b/mysql-master.yml
@@ -1,20 +1,3 @@
-apiVersion: v1
-kind: Service 
-metadata:
-  name: svc-mysql-master
-  labels: 
-    app: mysql-master
-    component: mysql
-spec:
-  selector:
-    app: mysql-master
-    component: mysql
-#    tier: database
-  ports:  
-  - port: 3306
-    name: mysql
-  clusterIP: None # Headless
----
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -23,7 +6,7 @@ metadata:
     app: mysql-master
     component: mysql
 spec:
-  serviceName: svc-mysql-master
+  serviceName: svc-mysql
   podManagementPolicy: Parallel # Default is OrderedReady
   replicas: 1 # Default is 1
   selector:
@@ -51,16 +34,6 @@ spec:
         env:
 #         - name: MYSQL_ALLOW_EMPTY_PASSWORD
 #           value: "1"
-         - name: MYSQL_ROOT_HOST
-           valueFrom:
-             secretKeyRef:
-               name: mysql-secret
-               key: mysql-root-host
-         - name: MYSQL_ROOT_PASSWORD
-           valueFrom:
-             secretKeyRef:
-               name: mysql-secret
-               key: mysql-root-password
          - name: MYSQL_REPLICATION_PASSWORD
            valueFrom:
              secretKeyRef:
@@ -71,6 +44,16 @@ spec:
              secretKeyRef:
                name: mysql-secret
                key: mysql-replication-user
+         - name: MYSQL_ROOT_HOST
+           valueFrom:
+             secretKeyRef:
+               name: mysql-secret
+               key: mysql-root-host
+         - name: MYSQL_ROOT_PASSWORD
+           valueFrom:
+             secretKeyRef:
+               name: mysql-secret
+               key: mysql-root-password
          - name: MYSQL_USER
            valueFrom:
              secretKeyRef:
@@ -82,9 +65,9 @@ spec:
                name: mysql-secret
                key: mysql-password
          - name: MYSQL_DATABASE
-           value: biz4xdb
-         - name: MYSQL_DATABASE_1
            value: AspNetCoreApiStarter
+         - name: MYSQL_DATABASE_1
+           value: library
         ports:
         - containerPort: 3306
           name: mysql
@@ -97,7 +80,7 @@ spec:
       volumes:
       - name: mysql-initdb
         configMap:
-          name: mysqlinit
+          name: mysql-initdb
   volumeClaimTemplates:
   - metadata:
       name: mysql-master-persistent-storage
