--- a/mysql-slave.yml
+++ b/mysql-slave.yml
@@ -1,20 +1,3 @@
-apiVersion: v1
-kind: Service 
-metadata:
-  name: svc-mysql-slave
-  labels: 
-    app: mysql-slave
-    component: mysql
-spec:
-  selector:
-    app: mysql-slave
-    component: mysql
-#    tier: database
-  ports:  
-  - port: 3306
-    name: mysql
-  clusterIP: None # Headless
----
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -61,16 +44,6 @@ spec:
              secretKeyRef:
                name: mysql-secret
                key: mysql-root-password
-         - name: MYSQL_REPLICATION_PASSWORD
-           valueFrom:
-             secretKeyRef:
-               name: mysql-secret
-               key: mysql-replication-password
-         - name: MYSQL_REPLICATION_USER
-           valueFrom:
-             secretKeyRef:
-               name: mysql-secret
-               key: mysql-replication-user
          - name: MYSQL_USER
            valueFrom:
              secretKeyRef:
@@ -81,12 +54,22 @@ spec:
              secretKeyRef:
                name: mysql-secret
                key: mysql-password
+         - name: MYSQL_REPLICATION_PASSWORD
+           valueFrom:
+             secretKeyRef:
+               name: mysql-secret
+               key: mysql-replication-password
+         - name: MYSQL_REPLICATION_USER
+           valueFrom:
+             secretKeyRef:
+               name: mysql-secret
+               key: mysql-replication-user
          - name: MYSQL_MASTER_SERVICE_HOST
-           value: svc-mysql-master
+           value: svc-mysql
          - name: MYSQL_DATABASE
-           value: biz4xdb
-         - name: MYSQL_DATABASE_1
            value: AspNetCoreApiStarter
+         - name: MYSQL_DATABASE_1
+           value: library
         ports:
         - containerPort: 3306
           name: mysql
@@ -99,7 +82,7 @@ spec:
       volumes:
 #      - name: mysql-initdb
 #        configMap:
-#          name: mysqlinit
+#          name: mysql-initdb
   volumeClaimTemplates:
   - metadata:
       name: mysql-slave-persistent-storage
