--- a/mysqlset.yml
+++ b/mysqlset.yml
@@ -66,7 +66,7 @@ spec:
       volumes:
       - name: mysql-initdb
         configMap:
-          name: mysqlinit
+          name: mysql-initdb
   volumeClaimTemplates:
   - metadata:
       name: mysql-persistent-storage
