--- a/postgresql-secret.yml
+++ b/postgresql-secret.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysql-secret
+  name: postgres-secret
 type: Opaque
 data:
   postgresql-user: guest
-  postgresql-password: <password>
+  postgresql-password: UCpzc3cwcmQ=
