--- a/postgresql-initdb.yml
+++ b/postgresql-initdb.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: postgresql-init
+  name: postgresql-initdb
   namespace: default
 data:
   AspNetCoreApiStarter.sql: "-- MySQL dump 10.13  Distrib 8.0.16, for Linux
