--- a/postgresql-secret.yml
+++ b/postgresql-secret.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: postgres-secret
+  name: postgresql-secret
 type: Opaque
 data:
-  postgresql-user: guest
+  postgresql-user: Z3Vlc3Q=
   postgresql-password: UCpzc3cwcmQ=
