--- a/keycloak.yml
+++ b/keycloak.yml
@@ -38,9 +38,15 @@ spec:
         imagePullPolicy: Always
         env:
           - name: KEYCLOAK_USER
-            value: admin
+            valueFrom:
+              secretKeyRef:
+                name: keycloak-secret
+                key: keycloak-user
           - name: KEYCLOAK_PASSWORD
-            value: admin123
+            valueFrom:
+              secretKeyRef:
+                name: keycloak-secret
+                key: keycloak-password
           - name: KEYCLOAK_IMPORT
             value: "/etc/keycloak-realms.json -Dkeycloak.profile.feature.upload_scripts=enabled"
           - name: PROXY_ADDRESS_FORWARDING
