--- a/nodejsrestapi.yml
+++ b/nodejsrestapi.yml
@@ -54,26 +54,26 @@ spec:
           name: http3
           protocol: TCP
 #          hostPort: 8082
-#        readinessProbe:
-#          httpGet:
-#            path: /healthz/ready
-#            port: http2
-#            scheme: HTTPS
-#          initialDelaySeconds: 10
-#          periodSeconds: 5
-#          timeoutSeconds: 10
-#          failureThreshold: 3
-#          successThreshold: 1
-#        livenessProbe:
-#          httpGet:
-#            path: /healthz/live
-#            port: http2
-#            scheme: HTTPS
-#          initialDelaySeconds: 10
-#          periodSeconds: 5
-#          timeoutSeconds: 10
-#          failureThreshold: 3
-#          successThreshold: 1
+        readinessProbe:
+          httpGet:
+            path: /healthchecks/ready
+            port: http
+            scheme: HTTP
+          initialDelaySeconds: 10
+          periodSeconds: 5
+          timeoutSeconds: 10
+          failureThreshold: 3
+          successThreshold: 1
+        livenessProbe:
+          httpGet:
+            path: /healthchecks/live
+            port: http
+            scheme: HTTP
+          initialDelaySeconds: 10
+          periodSeconds: 5
+          timeoutSeconds: 10
+          failureThreshold: 3
+          successThreshold: 1
         volumeMounts:
         - name: nodejsrestapi-config
           mountPath: config/default.json
