--- a/rabbitmq_rbac.yml
+++ b/rabbitmq_rbac.yml
@@ -6,7 +6,7 @@ metadata:
   namespace: default 
 ---
 kind: Role
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: svc-rabbitmq
   namespace: default 
@@ -16,7 +16,7 @@ rules:
   verbs: ["get"]
 ---
 kind: RoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: svc-rabbitmq
   namespace: default
