--- a/hpa.yml
+++ b/hpa.yml
@@ -22,8 +22,7 @@ spec:
       metric: 
         name: requests-per-second
       describedObject:
-#        apiVersion: networking.k8s.io/v1beta1
-        apiVersion: extensions/v1beta1
+        apiVersion: networking.k8s.io/v1
         kind: Ingress 
         name: ingress
       target: 
@@ -57,8 +56,7 @@ spec:
       metric: 
         name: requests-per-second
       describedObject:
-#        apiVersion: networking.k8s.io/v1beta1
-        apiVersion: extensions/v1beta1
+        apiVersion: networking.k8s.io/v1
         kind: Ingress 
         name: ingress
       target: 
@@ -92,8 +90,7 @@ spec:
       metric: 
         name: requests-per-second
       describedObject:
-#        apiVersion: networking.k8s.io/v1beta1
-        apiVersion: extensions/v1beta1
+        apiVersion: networking.k8s.io/v1
         kind: Ingress 
         name: ingress
       target: 
@@ -127,8 +124,7 @@ spec:
       metric: 
         name: requests-per-second
       describedObject:
-#        apiVersion: networking.k8s.io/v1beta1
-        apiVersion: extensions/v1beta1
+        apiVersion: networking.k8s.io/v1
         kind: Ingress 
         name: ingress
       target: 
